# python-project-template-example

./: .copier-answers.yml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cspell.json  mkdocs.yml  project-terms.txt  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  spellcheck.yaml
docs/: reference.md
src/sample_project/: cli.py
tests/: test_cli.py  test_simple.py
